# chipolata

./: .gitignore  Cargo.toml  Makefile  README.md
docs/: 0.bootstrap.js  1.bootstrap.js  README.md  bootstrap.js  index.html  styles.css
src/: bin.rs  cpu.rs  lib.rs  main.rs  mmu.rs  wasm_bindings.rs
src/chip8/: cpu.rs  mmu.rs  mod.rs
web/: display.js  helpers.js  index.html  index.js  keypad.js  package-lock.json  package.json  styles.css  webpack.config.js
web/chip8/: audio.js  disassembler.js  index.js  utils.js
