[package]
name = "chipolata"
version = "1.0.0"
authors = ["William Durand <will+git@drnd.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
name = "chipolata"
path = "src/lib.rs"

[[bin]]
name = "chipolata"
path = "src/bin.rs"
required-features = ["cli"]

[features]
cli = ["structopt", "minifb", "rodio"]


[dependencies]
rand = "0.8.1"
# CLI
structopt = { version = "0.3.13", optional = true }
minifb = { version = "0.19.1", optional = true }
rodio = { version = "0.13.0", optional = true }
# WASM
wasm-bindgen = { version = "0.2" }
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1.6"
